[project]
name = "hcp-photo-downloader"
version = "0.1.0"
description = "Download photos from a Synology NAS through the gofile sharing interface"
requires-python = ">=3.11"
dependencies = [
    "playwright>=1.40.0",
    "requests>=2.31.0",
    "tqdm>=4.66.0",
]

[project.scripts]
download = "download:main"
